# cf4ocl-examples

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  bank_conflicts.c  bank_conflicts.cl  bank_conflicts.h  ca_mt.c  ca_mt.cl  examples_common.c  examples_common.in.h  matmult.c  matmult.cl  matmult.h
src/bankconf/: CMakeLists.txt  bank_conflicts.c  bank_conflicts.h
src/ca_mt/: CMakeLists.txt  ca_mt.c  ca_mt.cl
src/matmult/: CMakeLists.txt  matmult.c  matmult.cl  matmult.h
src/prng/: CMakeLists.txt  cp_sem.h  init.cl  rng.cl  rng_ccl.c  rng_ocl.c
